# DP

./: df.pvsm  do_sym_bc  run
Graphs/: Graphs.ipynb
Graphs/Domains/: Domains.ipynb
Graphs/LOG_test_0.0.1/: Log_res3  Temp_log3
Graphs/Min_Max/: Min_max.ipynb  table_1.tex  table_10.tex  table_3.tex  table_5.tex
Graphs/Min_Max/Files/LOG_FILES/: MinMax_temp10  MinMax_temp11  MinMax_temp12  MinMax_temp13  MinMax_temp14  MinMax_temp15  MinMax_temp16  MinMax_temp17  MinMax_temp18  MinMax_temp8  (+3 more)
Latex/DP/: abstract.tex  commands.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  packages.tex  reference.bib
Latex/DP/kapitoly/: kapitola1.aux  kapitola1.tex  kapitola2.aux  kapitola2.tex  kapitola3.aux  kapitola3.tex  kapitola4.aux  kapitola4.tex  uvod.aux  uvod.tex  zaver.aux  zaver.tex
lbm3d/: block_size_optimizer.h  core.h  defs.h  kernels.h  lagrange_3D.h  lagrange_3D.hpp  lattice.h  lbm.h  lbm.hpp  lbm_block.h  lbm_block.hpp  lbm_data.h  nonNewtonian.h  state.h  state.hpp  state_NSE_ADE.h  vtk_writer.hpp
lbm3d/d3q27/: bc.h  bc_orig.h  col_bgk.h  col_bgk_well.h  col_clbm.h  col_clbm_fei.h  col_clbm_well.h  col_cum.h  col_cum_sgs.h  col_cum_well.h  col_fclbm.h  col_kbc_c.h  col_kbc_n.h  col_mrt.h  col_srt.h  col_srt_modif_force.h  col_srt_well.h  common.h  common_well.h  eq.h  eq_entropic.h  eq_inv_cum.h  eq_well.h  macro.h  streaming_AA.h  streaming_AB.h
lbm3d/d3q7/: bc.h  col_clbm.h  col_clbm_RS.h  col_mrt.h  col_srt.h  common.h  eq.h  macro.h  streaming_AA.h  streaming_AB.h
sim_NSE_ADE/: CMakeLists.txt  run  sim_T1.cu
(+21 files in other folders)
